# py-baleen

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile.cpu  Dockerfile.gpu  LICENSE  PLAN_eventalign_pipeline.md  README.md  TODO_fixes.md  TODO_improvements.md  plan.md  pyproject.toml  setup.py
.github/workflows/: docker.yml
.sisyphus/plans/: hmm-training-modes.md
baleen/: __init__.py  __main__.py  cli.py
baleen/_cuda_dtw/: Makefile  __init__.py  cuda_utils.hpp  dtw.hpp  dtw_api.cpp  dtw_api.h  limits.hpp  multithreading.cpp  multithreading.h
baleen/eventalign/: __init__.py  _aggregation.py  _bam.py  _f5c.py  _hierarchical.py  _hmm_training.py  _pipeline.py  _probability.py  _read_bam.py  _signal.py
develop_doc/: FUTURE_IMPROVEMENTS.md  ROADMAP.md
develop_doc/superpowers/plans/: 2026-03-21-calibration-fix.md  2026-03-21-gpu-batch-dtw.md
develop_doc/superpowers/specs/: 2026-03-21-calibration-fix-design.md  2026-03-21-gpu-utilization-optimization-design.md
docs/: AGENT_INSTRUCTION.md  FUTURE_IMPROVEMENTS.md  figure_description.md  workflow_default.md  workflow_description.md  workflow_figure_description.md
docs/superpowers/plans/: 2026-03-23-read-level-bam-output.md
docs/superpowers/specs/: 2026-03-23-read-level-bam-output-design.md
notebooks/: calibration_diagnostic.ipynb  calibration_diagnostic_all_positions.csv  calibration_diagnostic_known_mods.csv  dtw.ipynb  eventalign_pipeline.ipynb  hmm_training_demo.ipynb  improvement_ablation.ipynb  internal_benchmarking.ipynb  kmer_deconvolution_benchmark.ipynb  modbam_position_mapping.ipynb  padding_benchmark.ipynb  position_offset_evaluation.ipynb  read_level_benchmark.ipynb  semi_supervised_calibration.ipynb  signal_concatenate_verification.ipynb  test_modbam_output.ipynb  transcript_level_benchmark.ipynb
scripts/: profile_pipeline.py
testdata/: BENCHMARK_TODO.md  evaluate_benchmark.py  known_modifications.tsv  prepare_bams.sh  ref.fa.dict  run_benchmark.sh
testdata/0.0/data/control_1/: control_1.bam  control_1.bam.bai
testdata/0.0/data/native_1/: native_1.bam  native_1.bam.bai
testdata/0.0/output/: site_results.tsv
testdata/0.1/data/control_1/: control_1.bam  control_1.bam.bai
tests/: test_aggregation.py  test_bam.py  test_cli.py  test_dtw.py  test_f5c.py  test_hierarchical.py  test_hmm_training.py  test_integration.py  test_pipeline.py  test_probability.py  test_read_bam.py  test_setup.py  test_signal.py
(+57 files in other folders)
