[build-system]
requires = ["setuptools>=64", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "baleen"
version = "0.1.0"
description = "CUDA-accelerated DTW and nanopore signal analysis pipeline"
requires-python = ">=3.9"
dependencies = ["numpy", "tslearn", "pysam", "scipy"]

[project.scripts]
baleen = "baleen.cli:main"
