[build-system]
requires = ["setuptools>=64", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "baleen"
version = "0.1.0"
description = "Hierarchical Bayesian framework for RNA modification detection from nanopore direct RNA sequencing"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Logan Chen"},
]
keywords = ["nanopore", "RNA-modifications", "DTW", "CUDA", "HMM", "bioinformatics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.9",
    "tslearn>=0.6",
    "pysam>=0.21",
    "tqdm>=4.60",
    "pandas>=1.5",
]

[project.urls]
Homepage = "https://github.com/loganylchen/py-baleen"
Repository = "https://github.com/loganylchen/py-baleen.git"
Issues = "https://github.com/loganylchen/py-baleen/issues"

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
baleen = "baleen.cli:main"

[tool.setuptools.packages.find]
include = ["baleen*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
